<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:id="@+id/root_view">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="6dp"
        android:paddingBottom="20dp"
        android:text="@string/app_title"
        android:textColor="@android:color/white"
        android:textSize="32sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:text="@string/feature_supported"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/software_id_attestation_supported"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="12sp"
                android:text="@string/software_id_attestation_supported"
                android:textColor="@android:color/white" />
            <TextView
                android:id="@+id/device_id_attestation_supported"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="12sp"
                android:text="@string/device_id_attestation_supported"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/hardware_id_attestation_supported"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="12sp"
                android:text="@string/hardware_id_attestation_supported"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/device_properties_attestation_supported"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="12sp"
                android:text="@string/device_properties_attestation_supported"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/verified_boot_supported"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="12sp"
                android:text="@string/verified_boot_supported"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="6dp"
        android:text="@string/device_properties"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="vertical">
            <TextView
                android:id="@+id/brand_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="12sp"
                android:text="@string/brand_property"
                android:textColor="@android:color/white" />
            <TextView
                android:id="@+id/device_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="12sp"
                android:text="@string/device_property"
                android:textColor="@android:color/white" />
            <TextView
                android:id="@+id/product_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="12sp"
                android:text="@string/product_property"
                android:textColor="@android:color/white" />
            <TextView
                android:id="@+id/manufacturer_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="12sp"
                android:text="@string/manufacturer_property"
                android:textColor="@android:color/white" />
            <TextView
                android:id="@+id/model_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="12sp"
                android:text="@string/model_property"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/attested_brand_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="12sp"
                android:text="@string/attested_brand_property"
                android:textColor="@android:color/white" />
            <TextView
                android:id="@+id/attested_device_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="12sp"
                android:text="@string/attested_device_property"
                android:textColor="@android:color/white" />
            <TextView
                android:id="@+id/attested_product_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="12sp"
                android:text="@string/attested_product_property"
                android:textColor="@android:color/white" />
            <TextView
                android:id="@+id/attested_manufacturer_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="12sp"
                android:text="@string/attested_manufacturer_property"
                android:textColor="@android:color/white" />
            <TextView
                android:id="@+id/attested_model_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textSize="12sp"
                android:text="@string/attested_model_property"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/widevine_properties"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/widevine_system_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textSize="12sp"
            android:text="@string/widevine_system_id"
            android:textColor="@android:color/white" />
        <TextView
            android:id="@+id/widevine_SPOID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textSize="12sp"
            android:text="@string/widevine_SPOID"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="6dp"
        android:text="@string/root_of_trust"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/device_locked"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textSize="12sp"
            android:text="@string/device_locked"
            android:textColor="@android:color/white" />
        <TextView
            android:id="@+id/verified_boot_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textSize="12sp"
            android:text="@string/verified_boot_state"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/challenge_is_valid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textSize="12sp"
            android:text="@string/challenge_is_valid"
            android:textColor="@android:color/white" />
        <TextView
            android:id="@+id/verified_boot_key"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textSize="12sp"
            android:text="@string/verified_boot_key"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/build_fingerprint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="6dp"
        android:text="@string/build_fingerprint"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

</LinearLayout>
